2010-11-19  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by David Hyatt.

        up arrow doesn't work with RTL text with word wrapping
        https://bugs.webkit.org/show_bug.cgi?id=41987

        The bug was caused by positionForPoint's not returning the correct affinity when the x coordiate
        is to the left of the first line, and startOfLine's incorrectly moving position to the previous candidate.

        Fixed the bug by returning upstream VisiblePosition in positionForPoint if the first inline text box's offset
        is greater than 0.  Also removed the code added by http://trac.webkit.org/changeset/23608 since this changeset
        does not add any test, and the problem described in the changelog reproduces regardless of the code's presence.

        Tests: editing/selection/click-left-of-rtl-wrapping-text.html
               editing/selection/modify-up-on-rtl-wrapping-text.html

        * editing/visible_units.cpp:
        (WebCore::startOfLine):
        * rendering/RenderText.cpp:
        (WebCore::RenderText::positionForPoint):
2010-11-29  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by David Hyatt.

        up arrow doesn't work with RTL text with word wrapping
        https://bugs.webkit.org/show_bug.cgi?id=41987

        Added tests to ensure WebKit places caret at the right position in soft-wrapping RTL text when clicking
        to the left of RTL text or when moving upwards at the end of line.

        * editing/selection/click-left-of-rtl-wrapping-text-expected.txt: Added.
        * editing/selection/click-left-of-rtl-wrapping-text.html: Added.
        * editing/selection/home-end-expected.txt: RTL's expected result now matches LTR's.
        * editing/selection/modify-up-on-rtl-wrapping-text-expected.txt: Added.
        * editing/selection/modify-up-on-rtl-wrapping-text.html: Added.
        * platform/chromium-win/editing/selection/extend-selection-home-end-expected.txt: RTL's expected result now matches LTR's.
        * platform/gtk/editing/selection/extend-selection-home-end-expected.txt: Ditto.
        * platform/mac/editing/selection/extend-selection-home-end-expected.txt: Ditto.
        * platform/win/editing/selection/extend-selection-home-end-expected.txt: Ditto.


Canonical link: https://commits.webkit.org/63320@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72861 268f45cc-cd09-0410-ab3c-d52691b4dbfc